--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,12 @@ wf3_ticket:
     resource: "@Wf3TicketBundle/Resources/config/routing.yml"
     prefix:   /
 
+login:
+    pattern:   /
+    defaults:  { _controller: Wf3TicketBundle:Default:home }
+
+login_check:
+    pattern:   /login_check
+
+logout:
+    pattern:   /logout
