--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,10 +29,15 @@ security:
 
     firewalls:
         default:
-            pattern:   ^/
+            pattern:    ^/
             anonymous: ~
-            http_basic:
-                realm: "Tickets !"
+            form_login:
+                login_path:  /
+                check_path:  /login_check
+            logout:
+                path:   /logout
+                target: /
+
 
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
